20/09/2018
Node version from 6 to 7

25/09/2018
Added mysql client
Formatting dockerfile

25/10/2018
Node version from 7 to 8

08/11/2018
Add python-pip